--- a/WhipLib/WhipLib.vcxproj.filters
+++ b/WhipLib/WhipLib.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="Polygon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Unmangler.cpp">
