--- a/WhipLib/WhipLib.vcxproj.filters
+++ b/WhipLib/WhipLib.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClInclude Include="SignPlans\TreePlans.h">
       <Filter>Header Files\SignPlans</Filter>
     </ClInclude>
+    <ClInclude Include="DebugShapes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Unmangler.cpp">
@@ -179,6 +182,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="WhipModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugShapes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
