signs are shown, albeit with wrong rotation and texture

--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="SignPlans\Tower2Plans.h" />
     <ClInclude Include="SignPlans\TowerPlans.h" />
     <ClInclude Include="SignPlans\TreePlans.h" />
+    <ClInclude Include="SignType.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TrackData.h" />
     <ClInclude Include="Types.h" />
