--- a/TrackEditor/TrackEditor.vcxproj
+++ b/TrackEditor/TrackEditor.vcxproj
@@ -162,6 +162,7 @@ exit 1</Command>
     <ClCompile Include="EditGeometryWidget.cpp" />
     <ClCompile Include="EditSeriesDialog.cpp" />
     <ClCompile Include="EditSignWidget.cpp" />
+    <ClCompile Include="EditStuntWidget.cpp" />
     <ClCompile Include="EditSurfaceDialog.cpp" />
     <ClCompile Include="GlobalTrackSettings.cpp" />
     <ClCompile Include="moc\moc_DebugSlider.cpp" />
@@ -170,6 +171,7 @@ exit 1</Command>
     <ClCompile Include="moc\moc_EditDataWidget.cpp" />
     <ClCompile Include="moc\moc_EditGeometryWidget.cpp" />
     <ClCompile Include="moc\moc_EditSignWidget.cpp" />
+    <ClCompile Include="moc\moc_EditStuntWidget.cpp" />
     <ClCompile Include="moc\moc_GlobalTrackSettings.cpp" />
     <ClCompile Include="moc\moc_TrackPreview.cpp" />
     <ClCompile Include="QtHelpers.cpp" />
@@ -313,12 +315,23 @@ exit 1</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
     </CustomBuild>
+    <CustomBuild Include="EditStuntWidget.h">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\moc.exe "%(Filename).h" -o "moc\moc_%(Filename).cpp" -b "..\TrackEditor.h"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\moc.exe "%(Filename).h" -o "moc\moc_%(Filename).cpp" -b "..\TrackEditor.h"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">MOC'ing %(Filename).h...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">MOC'ing %(Filename).h...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">moc\moc_%(Filename).cpp;%(Outputs)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">moc\moc_%(Filename).cpp;%(Outputs)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\moc.exe;%(AdditionalInputs)</AdditionalInputs>
+    </CustomBuild>
     <ClInclude Include="QtHelpers.h" />
     <ClInclude Include="ui\ui_DisplaySettings.h" />
     <ClInclude Include="ui\ui_EditAudioWidget.h" />
     <ClInclude Include="ui\ui_EditDataWidget.h" />
     <ClInclude Include="ui\ui_EditGeometryWidget.h" />
     <ClInclude Include="ui\ui_EditSignWidget.h" />
+    <ClInclude Include="ui\ui_EditStuntWidget.h" />
     <ClInclude Include="ui\ui_EditSurfaceDialog.h" />
     <ClInclude Include="ui\ui_EditSeriesDialog.h" />
     <ClInclude Include="ui\ui_GlobalTrackSettings.h" />
@@ -472,6 +485,17 @@ exit 1</Command>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="EditAudioWidget.ui">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UIC'ing %(Filename).ui...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UIC'ing %(Filename).ui...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(RootDir)%(Directory)ui\ui_%(Filename).h;%(Outputs)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(RootDir)%(Directory)ui\ui_%(Filename).h;%(Outputs)</Outputs>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="EditStuntWidget.ui">
       <FileType>Document</FileType>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\external\Qt5\bin\uic.exe "%(FullPath)" -o "%(RootDir)%(Directory)ui\ui_%(Filename).h"</Command>
